--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -80,4 +80,24 @@
   .ant-menu-dark .ant-menu-inline.ant-menu-sub {
     background: #0495e4;
   }
+  .ant-menu-vertical > .ant-menu-item, .ant-menu-vertical-left > .ant-menu-item, .ant-menu-vertical-right > .ant-menu-item, .ant-menu-inline > .ant-menu-item, .ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-right > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+    line-height: 75px;
+    height: 75px;
+    padding: 0 !important;
+  }
+  .ant-menu-item > a {
+    text-align: center;
+  }
+  .ant-menu-inline-collapsed > .ant-menu-item .anticon, .ant-menu-inline-collapsed > .ant-menu-item-group > .ant-menu-item-group-list > .ant-menu-item .anticon, .ant-menu-inline-collapsed > .ant-menu-submenu > .ant-menu-submenu-title .anticon {
+    font-size: 24px;
+    line-height: 48px;
+    display: block;
+  }
+  .ant-menu-inline-collapsed > .ant-menu-item .anticon + span, .ant-menu-inline-collapsed > .ant-menu-item-group > .ant-menu-item-group-list > .ant-menu-item .anticon + span, .ant-menu-inline-collapsed > .ant-menu-submenu > .ant-menu-submenu-title .anticon + span {
+    max-width: 100%;
+    opacity: 1;
+    line-height: 20px;
+    display: block;
+    text-align: center;
+  }
 }
