文档界面完善

--- a/src/routes/Documention/DocList.less
+++ b/src/routes/Documention/DocList.less
@@ -22,6 +22,18 @@
       height: 48px;
       line-height: 48px;
     }
+    .ant-avatar > img {
+      max-width: 35px;
+      max-height: 49px;
+      width: 100%;
+      height: auto;
+    }
+    .ant-avatar-square {
+      border-radius: 0;
+    }
+    .ant-list-item-meta-avatar {
+      margin-right: 3px;
+    }
   }
   .headerInfo {
     position: relative;
@@ -48,6 +60,9 @@
       right: 0;
     }
   }
+  .searchBar {
+    margin-bottom: 48px;
+  }
   .listContent {
     font-size: 0;
     .listContentItem {
@@ -69,6 +84,9 @@
   .extraContentSearch {
     margin-left: 16px;
     width: 272px;
+  }
+  .uploadBtn {
+    margin: 24px 0;
   }
 }
 
