--- a/src/routes/Documention/DocList.less
+++ b/src/routes/Documention/DocList.less
@@ -60,9 +60,6 @@
       right: 0;
     }
   }
-  .searchBar {
-    margin-bottom: 48px;
-  }
   .listContent {
     font-size: 0;
     .listContentItem {
@@ -85,10 +82,24 @@
     margin-left: 16px;
     width: 272px;
   }
-  .uploadBtn {
-    margin: 24px 0;
-  }
 }
+
+.searchBar {
+  margin-bottom: 24px;
+  .slectRight{
+    margin-right: 16px;
+    padding: 6px 0;
+  }
+  .ant-select-selection--single{
+    height: 40px;
+  }
+  .ant-select-selection__rendered{
+    line-height: 40px;
+  }
+ 
+}
+
+
 
 @media screen and (max-width: @screen-xs) {
   .standardList {
