--- a/src/routes/Documention/DocList.less
+++ b/src/routes/Documention/DocList.less
@@ -90,13 +90,14 @@
     margin-right: 16px;
     padding:6px 0;
   }
-  .ant-select-selection--single{
-    height: 40px;
-  }
-  .ant-select-selection__rendered{
-    line-height: 40px;
-  }
- 
+  :global {
+    .ant-select-selection--single{
+      height: 40px;
+    }
+    .ant-select-selection__rendered{
+      line-height: 40px;
+    }
+  } 
 }
 
 
