--- a/src/routes/Data/TableList.less
+++ b/src/routes/Data/TableList.less
@@ -34,6 +34,14 @@
     margin-bottom: 24px;
   }
 }
+.deleteBtn {
+  border: 1px solid transparent;
+  border-color: #d9d9d9;
+  padding: 5px 15px;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, 0.65);
+  margin-left: 0;
+}
 
 @media screen and (max-width: @screen-lg) {
   .tableListForm :global(.ant-form-item) {
