--- a/src/routes/Dashboard/Analysis.less
+++ b/src/routes/Dashboard/Analysis.less
@@ -130,7 +130,28 @@
   margin-left: 8px;
   color: @heading-color;
 }
+.mapRow{
+  margin-top: 24px;
+}
+.mapChart {
+  padding-top: 24px;
+  height: 457px;
+  text-align: center;
+  img {
+    display: inline-block;
+    max-width: 100%;
+    max-height: 437px;
+  }
+}
+.pieCard :global(.pie-stat) {
+  font-size: 24px !important;
+}
 
+@media screen and (max-width: @screen-lg) {
+  .mapChart {
+    height: auto;
+  }
+}
 @media screen and (max-width: @screen-lg) {
   .salesExtra {
     display: none;
