报表界面完善优化

--- a/src/routes/Dashboard/Analysis.less
+++ b/src/routes/Dashboard/Analysis.less
@@ -135,16 +135,19 @@
 }
 .mapChart {
   padding-top: 24px;
-  height: 457px;
+  height: 412px;
   text-align: center;
   img {
     display: inline-block;
     max-width: 100%;
-    max-height: 437px;
+    max-height: 385px;
   }
 }
 .pieCard :global(.pie-stat) {
   font-size: 24px !important;
+}
+.grade{
+  margin-top: 24px;
 }
 
 @media screen and (max-width: @screen-lg) {
