工作台日历添加、信息详情-内容页面完善

--- a/src/routes/Dashboard/Workplace.less
+++ b/src/routes/Dashboard/Workplace.less
@@ -163,6 +163,31 @@
   color: @disabled-color;
 }
 
+.events {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  :global {
+    .ant-badge-status-text {
+      font-size: 12px;
+    }
+  }
+}
+.events .ant-badge-status {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  text-overflow: ellipsis;
+  font-size: 12px;
+}
+.notesMonth {
+  text-align: center;
+  font-size: 28px;
+}
+.notesMonth section {
+  font-size: 28px;
+}
+
 @media screen and (max-width: @screen-xl) and (min-width: @screen-lg) {
   .activeCard {
     margin-bottom: 24px;
