工作台日历完善

--- a/src/routes/Dashboard/Workplace.less
+++ b/src/routes/Dashboard/Workplace.less
@@ -187,6 +187,11 @@
 .notesMonth section {
   font-size: 28px;
 }
+:global {
+  .ant-fullcalendar-fullscreen .ant-fullcalendar-date {
+    border-top: 1px solid #e8e8e8;
+  }
+}
 
 @media screen and (max-width: @screen-xl) and (min-width: @screen-lg) {
   .activeCard {
