工作台任务列表完成

--- a/src/routes/Dashboard/Workplace.less
+++ b/src/routes/Dashboard/Workplace.less
@@ -41,8 +41,8 @@
 }
 
 .extraContent {
+  margin-bottom: 24px;
   .clearfix();
-  float: right;
   white-space: nowrap;
   .statItem {
     padding: 0 32px;
@@ -190,6 +190,16 @@
 :global {
   .ant-fullcalendar-fullscreen .ant-fullcalendar-date {
     border-top: 1px solid #e8e8e8;
+  }
+  .ant-tabs-nav .ant-tabs-tab{
+    padding-top: 0;
+    margin: 0 8px 0 0;
+  }
+  .ant-table-small > .ant-table-content > .ant-table-body > table > .ant-table-tbody > tr > td{
+    text-align: center;
+  }
+  .ant-tabs-ink-bar{
+    height: 0;
   }
 }
 
