报表页面完善

--- a/src/routes/Project/ProjectOverview.less
+++ b/src/routes/Project/ProjectOverview.less
@@ -66,6 +66,9 @@
         padding-bottom: 14px;
         line-height: 24px;
       }
+      .ant-tabs-nav .ant-tabs-tab-active {
+        color: rgba(0, 0, 0, 0.85);
+      }
     }
     .ant-tabs-extra-content {
       padding-right: 24px;
