--- a/src/routes/Project/ProjectReport.less
+++ b/src/routes/Project/ProjectReport.less
@@ -16,6 +16,35 @@
   font-size: 24px !important;
 }
 
+.salesCard {
+  .salesBar {
+    padding: 0 32px 32px 32px;
+  }
+  .salesRank {
+    padding: 0 32px 32px 72px;
+  }
+  :global {
+    .ant-tabs-bar {
+      padding-left: 16px;
+      .ant-tabs-nav .ant-tabs-tab {
+        padding-top: 16px;
+        padding-bottom: 14px;
+        line-height: 24px;
+      }
+      .ant-tabs-nav .ant-tabs-tab-active{
+        color:rgba(0, 0, 0, .85)
+      }
+    }
+    .ant-tabs-extra-content {
+      padding-right: 24px;
+      line-height: 55px;
+    }
+    .ant-card-head {
+      position: relative;
+    }
+  }
+}
+
 @media screen and (max-width: @screen-lg) {
   .mapChart {
     height: auto;
