工作台、转资申请页面优化

--- a/src/routes/Dashboard/Workplace.less
+++ b/src/routes/Dashboard/Workplace.less
@@ -191,16 +191,25 @@
   .ant-fullcalendar-fullscreen .ant-fullcalendar-date {
     border-top: 1px solid #e8e8e8;
   }
-  .ant-tabs-nav .ant-tabs-tab{
+  .ant-tabs-nav .ant-tabs-tab {
     padding-top: 0;
     margin: 0 8px 0 0;
   }
-  .ant-table-small > .ant-table-content > .ant-table-body > table > .ant-table-tbody > tr > td{
-    text-align: center;
+  .ant-table-small {
+    border: 0;
   }
-  .ant-tabs-ink-bar{
+  .ant-tabs-ink-bar {
     height: 0;
   }
+  .ant-card-extra {
+    padding: 16px 0 0;
+  }
+  .ant-table-tbody a {
+    color: rgba(0, 0, 0, 0.65);
+  }
+}
+.headerList {
+  float: left;
 }
 
 @media screen and (max-width: @screen-xl) and (min-width: @screen-lg) {
