项目详情-内容页面调整、项目详情-信息页面调整

--- a/src/routes/Project/ProjectContent.less
+++ b/src/routes/Project/ProjectContent.less
@@ -9,3 +9,9 @@
   color: rgba(0, 0, 0, 0.65);
   margin-left: 0;
 }
+.title {
+  color: @heading-color;
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
