--- a/src/routes/Project/ProjectContent.less
+++ b/src/routes/Project/ProjectContent.less
@@ -9,6 +9,9 @@
   color: rgba(0, 0, 0, 0.65);
   margin-left: 0;
 }
+.uploadBtn {
+  margin: 0 16px 16px 0;
+}
 .title {
   color: @heading-color;
   font-size: 16px;
