--- a/src/routes/Project/ProjectCost.less
+++ b/src/routes/Project/ProjectCost.less
@@ -1,2 +1,11 @@
 @import '~antd/lib/style/themes/default.less';
 @import '../../utils/utils.less';
+
+.extraContent {
+  display: flex;
+  margin-top: 8px;
+}
+.extraContentSearch {
+  margin-left: 16px;
+  width: 272px;
+}
