工作台样式优化、项目详情-成本页面样式优化

--- a/src/routes/Project/ProjectCost.less
+++ b/src/routes/Project/ProjectCost.less
@@ -4,8 +4,12 @@
 .extraContent {
   display: flex;
   margin-top: 8px;
+  width: 800px;
 }
 .extraContentSearch {
   margin-left: 16px;
   width: 272px;
+}
+.slectRight{
+  margin-left: 16px;
 }
