--- a/src/routes/Dashboard/Workplace.less
+++ b/src/routes/Dashboard/Workplace.less
@@ -158,6 +158,14 @@
   }
 }
 
+.taskList {
+  :global {
+    .ant-card-body {
+      padding: 8px 0;
+    }
+  }
+}
+
 .datetime {
   color: @disabled-color;
 }
@@ -196,9 +204,6 @@
   }
   .ant-table-small {
     border: 0;
-  }
-  .ant-tabs-ink-bar {
-    height: 0;
   }
   .ant-card-extra {
     padding: 16px 0 0;
