--- a/src/routes/Assess/AssessList.less
+++ b/src/routes/Assess/AssessList.less
@@ -22,6 +22,9 @@
       height: 48px;
       line-height: 48px;
     }
+    .ant-list-item-action {
+      min-width: 180px;
+    }
   }
   .headerInfo {
     position: relative;
