--- a/src/routes/Assess/StepForm.less
+++ b/src/routes/Assess/StepForm.less
@@ -22,6 +22,23 @@
       margin-right: 0;
       width: 33.33%;
     }
+    .ant-avatar-lg {
+      width: 48px;
+      height: 48px;
+      line-height: 48px;
+    }
+    .ant-avatar > img {
+      max-width: 35px;
+      max-height: 49px;
+      width: 100%;
+      height: auto;
+    }
+    .ant-avatar-square {
+      border-radius: 0;
+    }
+    .ant-list-item-meta-avatar {
+      margin-right: 3px;
+    }
   }
   height: 400px;
   overflow-y: auto;
